--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ter1sa.github.io/react-portfolio",
+  "homepage": "https://ter1sa.github.io/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -10,7 +10,6 @@
     "@mui/lab": "^5.0.0-alpha.97",
     "@mui/material": "^5.9.0",
     "@mui/styles": "^5.9.0",
-    "@pdftron/webviewer": "^8.12.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -23,9 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "1.22.1",
     "react-typed": "^1.2.0",
-    "tsparticles-shape-confetti": "1.7.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -34,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
